<resources>
    <string name="app_name" translatable="false">CopyBand</string>
    <string name="manual_title">Before start</string>
    <string name="start_btn">Open Mi Fit</string>
    <string name="notification_settings">" Allow notifications for CopyBand in bracelet settings via Mi Fit"</string>
    <string name="chose">Chose your Mi Band</string>
    <string name="flash">Flashed</string>
    <string name="clean_history">Clean history</string>
    <string name="edit_model">Setup other Mi Band</string>
    <string name="about">About</string>
    <string name="annotation">Do you want to remember something, but the phone is about to be discharged, or do you want to carry it with you? I have great news for you! You have a Mi Band, and you can send text to it using this application. Just enter it in the input field and click send. Magic happens and you see this text on your bracelet.</string>
    <string name="title_bd">Turn off bluetooth?</string>
    <string name="bt_diag">To prevent text loss due to other notifications, turn off Bluetooth.</string>
    <string name="off">Turn off</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_app">It seems that you do not have the Mi Fit application installed. Want to install it?</string>
    <string name="install">Install</string>
    <string name="bt_off">Bluetooth off</string>
    <string name="bt_on">Turning on Bluetooth...</string>
    <string name="setup_br">Chose Mi Band</string>
    <string name="edit">Message...</string>
    <string name="empty">History is empty, but it\'s easy to fix! Just send a message to your bracelet.</string>
    <string name="git">GitHub</string>
    <string name="long_title">Very long message</string>
    <string name="long_message">This message is very long to send to your bracelet. It will be cut off and the end may not fit. Continue?</string>
    <string name="contine">Contine</string>
    <string name="messages">Messages</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">Alarm</string>
    <string-array name="occurence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="remind_title">I will remind you</string>
    <string name="in">in</string>
    <string name="dsa">Don\'t show again</string>
    <string name="week_d">Week days</string>
    <string name="menu_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="wait_send">Sending on Mi Band...</string>
    <string name="time_error">Cannot set a reminder to the past</string>
</resources>
