<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/n_s"
            android:layout_gravity="center"/>
        <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/notification_settings"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_margin="12dp"
    android:textSize="22dp"
    android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:text="@string/setup_br"
            android:onClick="onClick"
        android:textColor="@color/colorPrimary"/>
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_light_background"
        android:text="@string/start_btn"
        android:onClick="onClick1"
        android:background="@color/colorPrimary"/>

    </LinearLayout>
</RelativeLayout>