<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:background="@drawable/gradient6"
        android:elevation="15dp">

      <EditText
        style="@style/widget"
        android:id="@+id/title"
          android:maxLines="3"
          android:hint="@string/edit"
          android:textColorHint="#D1D1D1"
          android:textColor="#FFFFFF"
          android:background="#00000000"
          android:layout_gravity="center_vertical"
          android:gravity="end|center"
          android:layout_margin="7dp"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:textSize="25dp" />

        <Button
            android:id="@+id/done"
            android:text="✓"
            android:onClick="onDoneClick"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/gradient4"
            android:layout_margin="5dp"
            android:elevation="5dp" />
    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingTop="8sp"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remind_title" />
        <Button
            android:id="@+id/date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDateClick"
            android:background="@drawable/gradient4"
            android:textColor="@color/colorPrimary"
            android:elevation="5dp"
            android:textSize="25dp"
            android:layout_margin="7dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in" />

        <Button
            android:id="@+id/time_button"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:background="@drawable/gradient4"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onTimeClick"
            android:elevation="5dp" />
    </LinearLayout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="8sp"
    android:layout_width="fill_parent"
      android:layout_height="wrap_content"></LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:layout_margin="7dp">

        <CheckBox
            android:id="@+id/alarm_checkbox"
            android:layout_weight="1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/alarm" />

        <Spinner
            android:id="@+id/occurence_spinner"
            android:layout_weight="1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/occurence" />

    </LinearLayout>
</LinearLayout>

